изменяяемые режимы резания для остальных переходов, не полностью

--- a/Sunduk.PWA/Components/CAM/EditSequenceComponent.razor
+++ b/Sunduk.PWA/Components/CAM/EditSequenceComponent.razor
@@ -1,4 +1,5 @@
-﻿<MudGrid Class="mt-2" Spacing="1">
+﻿@using Sunduk.PWA.Infrastructure.Sequences.Turning.Base
+<MudGrid Class="mt-2" Spacing="1">
     @switch (Sequence)
     {
         case TurningCustomSequence turningCustomSequence:
