--- a/Sunduk.PWA/Pages/Sunducam.razor
+++ b/Sunduk.PWA/Pages/Sunducam.razor
@@ -1,4 +1,5 @@
 ﻿@page "/sunducam"
+@using Sunduk.PWA.Infrastructure.Sequences.Turning.Base
 @inject IDialogService DialogService
 @inject Blazored.LocalStorage.ILocalStorageService LocalStorage
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-2">
